<resources>
    <string name="add">추가</string>
    <string name="addAccount">계좌번호 추가</string>
    <string name="addPartner">거래처 추가</string>
    <string name="address">주소</string>
    <string name="addressForWholesale">매장 위치</string>
    <string name="addressForRetail">매장 주소</string>
    <string name="agentName">사입자 이름</string>
    <string name="agentPhone">사입자 연락처</string>
    <string name="agree">동의</string>
    <string name="amount">수량</string>
    <string name="app_name">CPH</string>
    <string name="approval">승인</string>
    <string name="bank">은행</string>
    <string name="cancel">취소</string>
    <string name="canceled">취소되었습니다</string>
    <string name="categoryText">매장 분류는 다중 선택이 가능합니다</string>
    <string name="certify">인증</string>
    <string name="check_id">영문 숫자 6~64자로 입력해주세요.</string>
    <string name="check_pw">영문 숫자 6~64자로 입력해주세요.</string>
    <string name="check_pwConfirm">두 비밀번호가 일치하지 않습니다.</string>
    <string name="checkDuplication">중복 확인</string>
    <string name="clearSettings">설정 초기화</string>
    <string name="color">색상</string>
    <string name="companyName">상호명</string>
    <string name="companyPhone">매장 전화번호</string>
    <string name="complete">완료</string>
    <string name="complete_addBasket">장바구니 추가 완료</string>
    <string name="complete_addFavorite">즐겨찾기 추가 완료</string>
	<string name="complete_addPartner">거래처 추가 완료</string>
	<string name="complete_approval">승인 완료</string>
	<string name="complete_breakPartnerShip">거래처 삭제 완료</string>
	<string name="complete_cancelRequest">요청 취소 완료</string>
	<string name="complete_certification">인증 완료</string>
	<string name="complete_changeAddress">주소 변경 완료</string>
	<string name="complete_changeMallUrl">쇼핑몰 사이트 주소 변경 완료</string>
	<string name="complete_changeOrderStatus1">주문을 승인했습니다</string>
	<string name="complete_changeOrderStatus2">입금 완료 처리되었습니다</string>
	<string name="complete_changeOrderStatus3">거래완료 상태로 변경되었습니다</string>
	<string name="complete_changePhoneNumber">전화번호 변경 완료</string>
	<string name="complete_changePw">비밀번호 변경 완료</string>
	<string name="complete_changeRegistration">사업자 등록번호 변경 완료</string>
	<string name="complete_changeSampleStatus1">샘플 요청을 승인했습니다</string>
	<string name="complete_changeSampleStatus2">반납요청을 했습니다</string>
	<string name="complete_changeSampleStatus3">반납완료 상태로 변경했습니다</string>
	<string name="complete_changeShopProfile">프로필 변경 완료</string>
	<string name="complete_checkPhone">인증번호가 전송되었습니다</string>
	<string name="complete_clearSettings">설정이 초기화되었습니다</string>
	<string name="complete_deleteFavorite">즐겨찾기 삭제 완료</string>
	<string name="complete_deleteOrder">주문내역을 삭제했습니다</string>
	<string name="complete_deleteProduct">상품 삭제 완료</string>
	<string name="complete_deleteSample">샘플 삭제 완료</string>
	<string name="complete_deleteWishList">장바구니 삭제 완료</string>
	<string name="complete_deny">거절 완료</string>
	<string name="complete_editProduct">상품 수정 완료</string>
	<string name="complete_fire">해고 완료</string>
	<string name="complete_order">주문 완료</string>
	<string name="complete_pullUp">상품이 최상단으로 올라갔습니다</string>
	<string name="complete_requestPartnership">거래처 신청 완료</string>
	<string name="complete_requestSample">샘플 요청 완료</string>
	<string name="complete_saveSettings">설정이 저장되었습니다</string>
	<string name="complete_signUpWholesaleOwner">정보 입력이 완료되었습니다.\n관리자의 승인 후 가입이 완료됩니다.</string>
	<string name="complete_signUpRetailOwner">회원가입 완료</string>
	<string name="complete_signUpEmployee">정보 입력이 완료되었습니다.\n대표의 승인 후 가입이 완료됩니다.</string>
	<string name="complete_signIn">로그인 완료</string>
	<string name="complete_writeNotice">공지사항 작성 완료</string>
	<string name="complete_writeProduct">상품 등록 완료</string>
	<string name="complete_writeReply">댓글 작성 완료</string>
    <string name="confirm">확인</string>
    <string name="confirmPw">비밀번호 확인</string>
    <string name="currentPw">현재 비밀번호</string>
    <string name="deny">거절</string>
    <string name="disableSoldout">* 재고가 없는 상품은 체크를 해제해주세요.</string>
    <string name="duplicatedPhoneNumber">이미 가입된 번호입니다</string>
    <string name="employee_designer">디자이너</string>
    <string name="employee_md">MD</string>
    <string name="employee_normal">직원</string>
    <string name="failToAddBasket">장바구니 추가 실패</string>
    <string name="failToAddFavorite">즐겨찾기 추가 실패</string>
    <string name="failToAddPartner">거래처 추가 실패</string>
    <string name="failToApproval">승인 실패</string>
    <string name="failTobreakPartnerShip">거래처 삭제 실패</string>
    <string name="failToCancelRequest">요청 취소 실패</string>
    <string name="failToChangeAddress">주소 변경 실패</string>
    <string name="failToChangeMallUrl">쇼핑몰 사이트 주소 변경 실패</string>
    <string name="failToChangeOrderStatus">주문 상태 변경 실패</string>
    <string name="failToChangePhoneNumber">전화번호 변경 실패</string>
    <string name="failToChangeProfileImage">프로필 사진 변경 실패</string>
    <string name="failToChangePw">비밀번호 변경 실패</string>
    <string name="failToChangeRegistration">사업자 등록번호 변경 실패</string>
    <string name="failToChangeSampleStatus">샘플 상태 변경 실패</string>
    <string name="failToDeleteFavorite">즐겨찾기 삭제 실패</string>
    <string name="failToDeleteOrder">주문내역 삭제 실패</string>
    <string name="failToDeleteProduct">상품 삭제 실패</string>
    <string name="failToDeleteWishList">장바구니 삭제 실패</string>
    <string name="failToDeleteReply">댓글 삭제 실패</string>
    <string name="failToDeleteSample">샘플 삭제 실패</string>
    <string name="failToDeny">거절 실패</string>
    <string name="failToEditProduct">상품 수정 실패</string>
    <string name="failToFindId">아이디 찾기 실패</string>
    <string name="failToFindPw">비밀번호 찾기 실패</string>
    <string name="failToFire">해고 실패</string>
    <string name="failToLoadBitmap">이미지를 불러오지 못했습니다</string>
    <string name="failToLoadBitmap_OutOfMemory">메모리가 부족하여 이미지를 불러오지 못했습니다</string>
    <string name="failToLoadReplies">댓글을 불러오지 못했습니다</string>
    <string name="failToOrder">주문 실패</string>
    <string name="failToPullUp">상품 끌어올리기 실패</string>
    <string name="failToRequestPartnership">거래처 신청 실패</string>
    <string name="failToRequestSample">샘플 요청 실패</string>
    <string name="failToSearchShop">매장 검색 실패</string>
    <string name="failToSignIn">로그인 실패</string>
    <string name="failToSignUp">회원 가입 실패</string>
    <string name="failToWriteNotice">공지사항 작성 실패</string>
    <string name="failToWriteProduct">상품 등록 실패</string>
    <string name="failToWriteReply">댓글 작성 실패</string>
    <string name="findId">아이디 찾기</string>
    <string name="findPw">비밀번호 찾기</string>
    <string name="fire">해고</string>
    <string name="floor">층</string>
    <string name="font_big">메뉴 글씨 크기를 크게 변경하였습니다.</string>
    <string name="font_small">메뉴 글씨 크기를 작게 변경하였습니다.</string>
    <string name="forbiddenRequestSample">해당 매장에서 샘플 요청을 받지 않는 상태입니다.</string>
    <string name="hintForAccount">계좌번호 입력</string>
    <string name="hintForAccountName">예금주 입력</string>
    <string name="hintForAdd">직접 입력</string>
    <string name="hintForChangePhoneNumber">변경될 휴대폰번호 입력</string>
    <string name="hintForChangePw1">현재 비밀번호 입력</string>
    <string name="hintForChangePw2">새 비밀번호 입력</string>
    <string name="hintForChangePw3">새 비밀번호 확인</string>
    <string name="hintForCompanyPhone">매장 전화번호 입력</string>
    <string name="hintForCompanyReg">사업자 등록번호 입력</string>
    <string name="hintForEditNoticeTitle">공지사항의 제목을 입력해주세요.</string>
    <string name="hintForEditNoticeContent">공지사항의 내용을 입력해주세요.</string>
    <string name="hintForId">아이디 입력</string>
    <string name="hintForMallUrl">http://</string>
    <string name="hintForName">성함 입력</string>
    <string name="hintForPw">비밀번호 입력</string>
    <string name="hintForPhone">휴대폰번호 입력</string>
    <string name="hintForProductCategory">상품의 분류를 선택해주세요</string>
    <string name="hintForProductColor">상품의 색상을 선택해주세요</string>
    <string name="hintForProductDescription">상품설명을 입력해주세요</string>
    <string name="hintForProductMixtureRate">직접 입력, 예 : 면 80% 나일론 20%</string>
    <string name="hintForProductName">상품명을 입력해주세요</string>
    <string name="hintForProductPrice">상품의 가격을 입력해주세요</string>
    <string name="hintForProductSize">상품의 사이즈를 선택해주세요</string>
    <string name="hintForSearchCompanyName">상호명을 입력해주세요</string>
    <string name="hintForSearchCompanyPhone">전화번호를 입력해주세요</string>
    <string name="hintForSearchCompanyRegistration">사업자 등록번호를 입력해주세요</string>
    <string name="hintForSearchCustomer">거래처를 검색해주세요</string>
    <string name="hintForSearchKeyword">검색어를 입력해주세요</string>
    <string name="hintForSearchProduct">상품명을 입력해주세요</string>
    <string name="hintForSearchSample">상호명 또는 물품명을 입력해주세요</string>
    <string name="hintForCertification">인증 번호 입력</string>
    <string name="hintForWriteCompanyName">상호명 입력</string>
    <string name="hintForWriteCompanyAddress">주소 입력</string>
    <string name="hintForWriteCompanyOwnerName">성함 입력</string>
    <string name="id">아이디</string>
    <string name="imageSelectLimit">최대 10개까지 선택할 수 있습니다</string>
    <string name="inputPhone">전화번호 입력</string>
    <string name="inputCompanyInfo">매장 정보 입력</string>
    <string name="inputUserInfo">회원 정보 입력</string>
    <string name="inputCertification">인증번호 입력</string>
    <string name="lastList">마지막 리스트입니다</string>
    <string name="line">열</string>
    <string name="mallUrl">쇼핑몰 사이트 주소</string>
    <string name="name">성함</string>
    <string name="newPw">새 비밀번호</string>
    <string name="newPwConfirm">새 비밀번호 확인</string>
    <string name="next">다음</string>
    <string name="noReply">등록된 댓글이 없습니다.</string>
    <string name="noResult_searchRetail">검색된 상품이 없습니다.</string>
    <string name="noResult_searchWholsale">알맞은 검색 결과가 없습니다.</string>
    <string name="noResult_wish">장바구니가 비어있습니다.</string>
    <string name="notice">알림</string>
    <string name="noticeContent">공지사항 내용</string>
    <string name="noticeTitle">공지사항 제목</string>
    <string name="number">연락처</string>
    <string name="owner">대표</string>
    <string name="ownerAvailable">대표만 이용가능한 메뉴입니다</string>
    <string name="ownerName">대표 성함</string>
    <string name="payment1">무통장 입금</string>
    <string name="payment2">사입자 대납</string>
    <string name="payment3">매장 방문시 결제</string>
    <string name="payment3Selected">매장 방문시 결제를 선택하셨습니다</string>
    <string name="phoneNumber">휴대폰 번호</string>
    <string name="phoneNumberForWholesale">매장 전화번호</string>
    <string name="phoneNumberForRetail">사업장 전화번호</string>
    <string name="privateReply">체크시 판매자만 댓글을 볼 수 있습니다.</string>
    <string name="productCategory">상품 분류</string>
    <string name="productColor">상품 색상</string>
    <string name="productDescription">상품 설명</string>
    <string name="productMixtureRate">혼용률\</string>
    <string name="productName">상품명</string>
    <string name="productNotification">거래처 알림</string>
    <string name="productPrice">상품 가격</string>
    <string name="productPullUpDesc">최신순 정렬 시 상품이 최상단으로 올라갑니다.</string>
    <string name="productPhoto">상품 사진</string>
    <string name="productPhotoUpload">상품 사진 등록</string>
    <string name="productPhotoUploadDesc">편집된 사진을 올리실 때는 360 x 562 사이즈로 올려주세요.</string>
    <string name="productPublic">공개 여부</string>
    <string name="productSelling">판매 중인 상품입니다</string>
    <string name="productSize">상품 사이즈</string>
    <string name="productSoldOut">품절된 상품입니다</string>
    <string name="productSoldOut2">현재 일시품절상태입니다</string>
    <string name="productStatus1">상품을 판매상태로 변경하였습니다</string>
    <string name="productStatus2">상품을 일시품절상태로 변경하였습니다</string>
    <string name="productStatus3">상품을 품절상태로 변경하였습니다</string>
    <string name="pullUpProduct">상품 끌어올리기</string>
    <string name="pw">비밀번호</string>
    <string name="registrationNumber">사업자 등록번호</string>
    <string name="retailOffline">소매(오프라인)</string>
    <string name="retailOnline">소매(인터넷쇼핑몰)</string>
    <string name="roomNumber">호</string>
    <string name="saveSettings">설정 저장</string>
    <string name="search">검색</string>
    <string name="searchCompany">매장 검색</string>
    <string name="searchCompanyName">상호명 검색</string>
    <string name="searchCompanyPhone">전화번호 검색</string>
    <string name="searchCompanyLocation">매장 위치 검색</string>
    <string name="soldOut">품절</string>
</resources>