<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <!-- 타이틀바. -->
    
    <com.cmons.cph.views.TitleBar
	    android:id="@+id/wholesaleSettingChangePasswordPage_titleBar" 
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_alignParentLeft="true"
	    android:layout_alignParentTop="true" />

    <!-- 배경. -->
    
    <ImageView 
        android:id="@+id/wholesaleSettingChangePasswordPage_ivBg" 
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:layout_below="@id/wholesaleSettingChangePasswordPage_titleBar"
	    android:scaleType="centerCrop"
	    android:src="@drawable/setting_bg" />

    <TextView
        android:id="@+id/wholesaleSettingChangePasswordPage_tvCurrentPw"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/wholesaleSettingChangePasswordPage_titleBar"
        android:text="@string/currentPw"
        android:textColor="#fff"
        android:gravity="center_vertical" />
    
    <EditText
        android:id="@+id/wholesaleSettingChangePasswordPage_etCurrentPw"
        android:layout_width="match_parent"
    	android:layout_height="0dp"
    	android:layout_below="@id/wholesaleSettingChangePasswordPage_tvCurrentPw"
	    android:layout_alignParentLeft="true"
	    android:background="@drawable/txt_box3"
	    android:gravity="center"
	    android:hint="@string/hintForChangePw1"
	    android:textColor="#000"
	    android:textColorHint="#555" />
    
    <TextView
        android:id="@+id/wholesaleSettingChangePasswordPage_tvPw1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/wholesaleSettingChangePasswordPage_etCurrentPw"
        android:text="@string/newPw"
        android:textColor="#fff"
        android:gravity="center_vertical" />
    
    <EditText
        android:id="@+id/wholesaleSettingChangePasswordPage_etPw1"
        android:layout_width="match_parent"
    	android:layout_height="0dp"
    	android:layout_below="@id/wholesaleSettingChangePasswordPage_tvPw1"
	    android:layout_alignParentLeft="true"
	    android:background="@drawable/txt_box3"
	    android:gravity="center"
	    android:hint="@string/hintForChangePw2"
	    android:textColor="#000"
	    android:textColorHint="#555" />
    
    <TextView
        android:id="@+id/wholesaleSettingChangePasswordPage_tvPw2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/wholesaleSettingChangePasswordPage_etPw1"
        android:text="@string/newPwConfirm"
        android:textColor="#fff"
        android:gravity="center_vertical" />
    
    <EditText
        android:id="@+id/wholesaleSettingChangePasswordPage_etPw2"
        android:layout_width="match_parent"
    	android:layout_height="0dp"
    	android:layout_below="@id/wholesaleSettingChangePasswordPage_tvPw2"
	    android:layout_alignParentLeft="true"
	    android:background="@drawable/txt_box3"
	    android:gravity="center"
	    android:hint="@string/hintForChangePw3"
	    android:textColor="#000"
	    android:textColorHint="#555" />
    
</RelativeLayout>