<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <!-- 타이틀바. -->
    
    <com.cmons.cph.views.TitleBar
	    android:id="@+id/wholesaleChangePasswordPage_titleBar" 
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_alignParentLeft="true"
	    android:layout_alignParentTop="true" />
    
    <!-- 배경. -->
    
    <ImageView 
        android:id="@+id/wholesaleChangePasswordPage_ivBg" 
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:layout_below="@id/wholesaleChangePasswordPage_titleBar"
	    android:scaleType="centerCrop"
	    android:src="@drawable/setting_bg2" />

    <TextView
        android:id="@+id/wholesaleChangePasswordPage_tvCurrentPassword"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/wholesaleChangePasswordPage_titleBar"
        android:text="@string/currentPw"
        android:textColor="#fff"
        android:gravity="bottom" />

    <EditText
        android:id="@+id/wholesaleChangePasswordPage_etCurrentPassword"
        android:layout_width="match_parent"
    	android:layout_height="0dp"
    	android:layout_below="@id/wholesaleChangePasswordPage_tvCurrentPassword"
	    android:layout_alignParentLeft="true"
	    android:background="@drawable/text_box"
	    android:gravity="center"
	    android:hint="@string/hintForChangePw1"
	    android:inputType="textPassword"
	    android:textColor="#000"
	    android:textColorHint="#555" />
    
    <TextView
        android:id="@+id/wholesaleChangePasswordPage_tvNewPassword"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/wholesaleChangePasswordPage_etCurrentPassword"
        android:text="@string/newPw"
        android:textColor="#fff"
        android:gravity="bottom" />

    <EditText
        android:id="@+id/wholesaleChangePasswordPage_etNewPassword"
        android:layout_width="match_parent"
    	android:layout_height="0dp"
    	android:layout_below="@id/wholesaleChangePasswordPage_tvNewPassword"
	    android:layout_alignParentLeft="true"
	    android:background="@drawable/text_box"
	    android:gravity="center"
	    android:hint="@string/hintForChangePw2"
	    android:inputType="textPassword"
	    android:textColor="#000"
	    android:textColorHint="#555" />
    
    <TextView
        android:id="@+id/wholesaleChangePasswordPage_tvNewPasswordConfirm"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/wholesaleChangePasswordPage_etNewPassword"
        android:text="@string/newPwConfirm"
        android:textColor="#fff"
        android:gravity="bottom" />

    <EditText
        android:id="@+id/wholesaleChangePasswordPage_etNewPasswordConfirm"
        android:layout_width="match_parent"
    	android:layout_height="0dp"
    	android:layout_below="@id/wholesaleChangePasswordPage_tvNewPasswordConfirm"
	    android:layout_alignParentLeft="true"
	    android:background="@drawable/text_box"
	    android:gravity="center"
	    android:hint="@string/hintForChangePw3"
	    android:inputType="textPassword"
	    android:textColor="#000"
	    android:textColorHint="#555" />
    
</RelativeLayout>